--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
     <div id="app"></div>
+    <% if(htmlWebpackPlugin.options.cdn){ %> <% for(var i in
+    htmlWebpackPlugin.options.cdn){ %>
+    <script src="<%= htmlWebpackPlugin.options.cdn[i] %>"></script>
+    <% } %> <% } %>
   </body>
 </html>
